[package]
name = "index-fixed"
version = "0.0.3"
authors = ["Cody P Schafer <dev@codyps.com>"]
license = "Apache-2.0 OR MIT"
keywords = ["slice", "array", "const", "fixed", "index"]
repository = "https://github.com/jmesmon/index-fixed"
documentation = "https://docs.rs/index-fixed"
description = "slice index-ables into arrays ([T] -> [T;N])"
include = [ "Cargo.toml", "src/*.rs" ]

[dependencies]
